test/bad/modified.spkt.expected
Error at test/bad/modified.spkt:4.7: Attempt to modify constant `con`.
Error at test/bad/modified.spkt:6.5: Attempt to modify constant `v`.
